--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Compiling the Python code...
+      - echo Compiling the Python code......
       - python HelloWorld_tst.py
   post_build:
     commands:
