--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,11 +7,12 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Compiling the Python code......
-      - python HelloWorld_tst.py
+      #- echo Compiling the Python code......
+      #- python HelloWorld_tst.py
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
+  type: zip
   files:
-    - HelloWorld.py
+    - src/**/*
