--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,11 +8,14 @@ phases:
     commands:
       - echo Build started on `date`
       #- echo Compiling the Python code......
-      #- python HelloWorld_tst.py
+      - "cp src/lambda_function.py target/"
+      - "cd target && zip lambda_function.zip lambda_function.py"
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
-  type: zip
   files:
-    - src/**/*
+    files:
+      - lambda_function.zip
+    discard-paths: "yes"
+    base-directory: "target"
