--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
     commands:
       - echo Build started on `date`
       #- echo Compiling the Python code......
-      - "cd src && zip -r /target/lambda_function.zip ."
+      - "cd src && zip -r ../target/lambda_function.zip ."
   post_build:
     commands:
       - echo Build completed on `date`
