--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      #- echo Compiling the Python code......
+      - npm install
   post_build:
     commands:
       - echo Build completed on `date`
