--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ provider:
   runtime: python2.7
   stage: stage
   region: ap-southeast-1
-  deploymentBucket: paktortest
+  # deploymentBucket: paktortest
 
 package:
   individually: true
